--- a/check_data/conda.yml
+++ b/check_data/conda.yml
@@ -3,9 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.2.3
-  - pip=20.3.3
-  - pytest=6.2.2
-  - scipy=1.6.1
+  - python=3.8.16
+  - pandas=2.0.0
+  - pip=23.1
+  - pytest=7.3.1
+  - scipy=1.10.1
   - pip:
-      - wandb==0.10.21
+      - wandb==0.15.0
