--- a/download/conda.yml
+++ b/download/conda.yml
@@ -3,7 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - requests=2.24.0
-  - pip=20.3.3
+  - python=3.8.16
+  - requests=2.28.2
+  - pip=23.1
   - pip:
-      - wandb==0.10.21
+      - wandb==0.15.0
