--- a/random_forest/conda.yml
+++ b/random_forest/conda.yml
@@ -3,13 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.2.3
-  - pip=20.3.3
-  - scikit-learn=0.24.1
-  - matplotlib==3.2.2
-  - plotly==4.4.1
-  - pillow=8.1.2
-  - mlflow=1.14.1
+  - python=3.8.16
+  - pandas=2.0.0
+  - pip=23.1
+  - scikit-learn=1.0.2
+  - matplotlib==3.7.1
+  - plotly==5.14.1
+  - pillow=9.5.0
+  - mlflow=2.2.2
   - pip:
-      - wandb==0.10.21
-      - omegaconf==2.0.6
+      - wandb==0.15.0
+      - omegaconf==2.3.0
