--- a/segregate/conda.yml
+++ b/segregate/conda.yml
@@ -3,8 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.2.3
-  - pip=20.3.3
-  - scikit-learn=0.24.1
+  - python=3.8.16
+  - pandas=2.0.0
+  - pip=23.1
+  - scikit-learn=1.0.2
   - pip:
-      - wandb==0.10.21
+      - wandb==0.15.0
